--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div id="resume" class="section">
             <h2>Download Resume</h2>
-            <a href="Resume.jpg" download class="btn">Download Resume</a>
+            <a href="resume.jpg" download class="btn">Download Resume</a>
         </div>
     </div>
 </body>
